--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@types/react-responsive-masonry": "^2.1.0",
     "@types/react-scroll": "^1.8.4",
     "@types/react-tabs": "^5.0.5",
+    "@types/react-tag-input": "^6.6.1",
     "autoprefixer": "^10.4.12",
     "postcss": "^8.4.18",
     "rimraf": "^3.0.2",
