--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-share": "^4.4.1",
     "react-sticky-box": "^1.0.2",
     "react-tabs": "^5.1.0",
+    "react-tag-input-component": "^2.0.2",
     "react-toastify": "^9.1.1",
     "react-use": "^17.4.0",
     "redux": "^4.2.1",
@@ -63,7 +64,6 @@
     "@types/react-responsive-masonry": "^2.1.0",
     "@types/react-scroll": "^1.8.4",
     "@types/react-tabs": "^5.0.5",
-    "@types/react-tag-input": "^6.6.1",
     "autoprefixer": "^10.4.12",
     "postcss": "^8.4.18",
     "rimraf": "^3.0.2",
